--- a/pom.xml
+++ b/pom.xml
@@ -6,28 +6,28 @@
     <packaging>jar</packaging>
     <name>auth</name>
     <version>1.0.0</version>
-    <url>https://github.com/openapitools/openapi-generator</url>
-    <description>OpenAPI Java</description>
+    <url>https://github.com/CodeCrew24/authservice_java</url>
+    <description>Auth service for java</description>
     <scm>
-        <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
-        <developerConnection>scm:git:git@github.com:openapitools/openapi-generator.git</developerConnection>
-        <url>https://github.com/openapitools/openapi-generator</url>
+        <connection>scm:git:git@github.com/CodeCrew24/authservice_java.git</connection>
+        <developerConnection>scm:git:git@github.com/CodeCrew24/authservice_java</developerConnection>
+        <url>https://github.com/CodeCrew24/authservice_java</url>
     </scm>
 
     <licenses>
         <license>
-            <name>Unlicense</name>
-            <url>http://unlicense.org</url>
+            <name>MIT</name>
+            <url>https://github.com/CodeCrew24/authservice_java/blob/main/LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <developers>
         <developer>
-            <name>OpenAPI-Generator Contributors</name>
-            <email>team@openapitools.org</email>
-            <organization>OpenAPITools.org</organization>
-            <organizationUrl>http://openapitools.org</organizationUrl>
+            <name>Code Crews</name>
+            <email></email>
+            <organization>CodeCrew24</organization>
+            <organizationUrl>https://github.com/CodeCrew24</organizationUrl>
         </developer>
     </developers>
 
