--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <name>auth</name>
     <version>1.0.0</version>
     <url>https://github.com/CodeCrew24/authservice_java</url>
+     <distributionManagement>
+  <repository>
+  <id>github</id>
+  <name>GitHub Packages</name>
+  <url>https://maven.pkg.github.com/https://github.com/CodeCrew24</url>
+  </repository>
+</distributionManagement>
     <description>Auth service for java</description>
     <scm>
         <connection>scm:git:git@github.com/CodeCrew24/authservice_java.git</connection>
